# fund-checklist

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.mimocode/command/: review-slice.md  run-tests.md
docs/: agent-evolution-design.md  architecture.md  dayu-agent-codiwiki-and-development-stage-analysis-20260614.md  dayu-agent-comparison-report.md  design.md  fund-analysis-template-draft.md  implementation-control.md  liu-chenggang-dayu-ai-coding-roadmap-20260614.md  repo-review-20260627-160458.md  repo-review-20260627-175632.md
docs/research/: dayu-agent-vs-fund-checklist-analysis.md
docs/reviews/: 13a-review-prompt-concise.md  13a-review-prompt.md  13b-review-prompt.md  14a-review-prompt-concise.md  14a-review-prompt.md  14a-review-round2-concise.md  14a-review-round2-prompt.md  14c-review-concise.md  14c-review-prompt.md  code-review-20260703-011252.md  code-review-20260703-231710.md  code-review-20260707-225500.md  code-review-20260708-000649.md  evidence-section-review-concise.md  evidence-section-review.md  fund-document-reading-tool-mvp-plan-20260627.md
fund_agent/: README.md  __init__.py
fund_agent/agent/: README.md  __init__.py  deepseek_llm.py  llm_tool_loop.py  tool_loop.py
fund_agent/cli/: __init__.py  main.py
fund_agent/fund/: README.md  __init__.py
fund_agent/fund/document_tools/: __init__.py  (+8 more)
fund_agent/host/: README.md  __init__.py  minimal_host.py
fund_agent/service/: __init__.py  audit_pipeline.py  chapter_generator.py  extraction.py  models.py  prompt_composer.py  reading_service.py  signal_scoring.py
tests/: README.md
(+27 files in other folders)
